config allowance